--- a/formalia/forside.tex
+++ b/formalia/forside.tex
@@ -23,7 +23,7 @@
    \vspace{0.55 cm}
   \begin{figure}[!ht]
 \centering
-\includegraphics[width=\textwidth]{Kerbal.png}
+%\includegraphics[width=\textwidth]{Kerbal.png}
 \label{fig:forside}
 \end{figure}
   \vspace{-0.35 cm}
