--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,8 @@
 \fancyfoot[RE,LO]{14gr413} %page number on all pages
 \fancyfoot[LE,RO]{\thepage}
 \fancyhead[LE,LO,RE,RO]{}
-\fancyhead[RO,LE]{\includegraphics[height=16pt]{logo_only.pdf}}
+\fancyhead[RO,LE]{%\includegraphics[height=16pt]{logo_only.pdf}
+}
 %% indledende formalia %%
 
 
@@ -60,7 +61,8 @@
 \fancyhead[RE,LO]{}
 \fancyhead[RE,LO]{\color{aaublue}\small\nouppercase\leftmark} %even page - chapter title
 
-\fancyhead[RO,LE]{\includegraphics[height=16pt]{logo_only.pdf}}
+\fancyhead[RO,LE]{%\includegraphics[height=16pt]{logo_only.pdf}
+}
 
 
 \pagestyle{fancy}
