Nu er den snart klar

--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -370,3 +370,7 @@
 
 \usepackage{empheq}
 \newcommand*\widefbox[1]{\fbox{\hspace{2em}#1\hspace{2em}}}
+
+\newcommand{\todoanders}[1]{\todo[color=red!40, author=Anders]{#1}}
+\graphicspath{{./rapport/billeder/}}
+\newcommand{\todohusk}[1]{\todo[color=red, author=HUSK:]{#1}}
