--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,1 +1,10 @@
 \chapter{Introduction}
+
+
+
+\begin{figure}
+\centering
+\input{figure/signal.tex}
+\caption{test.}
+\label{fig:test}
+\end{figure}
