--- a/Rapport/figure/signal.tex
+++ b/Rapport/figure/signal.tex
@@ -12,15 +12,18 @@
 \begin{axis}[%
 width=4.5in,
 height=3in,
-xmajorgrids = true,
-ymajorgrids = true,
+    grid = both,
+    minor tick num=1,
+    every major grid/.style={opacity=0.3},
+    major tick length=0pt,
+    minor tick length=0pt,
 scale only axis,
 xmin=0,
 xmax=0.09,
 xlabel={Time [s]},
 ymin=-1.5,
 ymax=1.5,
-ylabel={Voltage [V]},
+ylabel={Ampltude},
 axis background/.style={fill=white}
 ]
 \addplot [color=mycolor1,solid,thick]
