--- a/Rapport/00setup/Tikz.tex
+++ b/Rapport/00setup/Tikz.tex
@@ -4,6 +4,10 @@
 \usetikzlibrary{plotmarks}
 \pgfplotsset{compat=newest}
 \pgfplotsset{filter discard warning=false}
+
+\usetikzlibrary{external}
+\tikzexternalize[prefix=tikz/]
+
 %\usepackage{silence}
 %\WarningsOff[pgfplots]
 %\WarningFilter{latex}{Marginpar on page}
