--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,10 +1,9 @@
 \chapter{Introduction}
 
-
-
 \begin{figure}[H]
 \centering
-\input{figure/signal.tex}
+\tikzsetnextfilename{signal}
+\input{figures/signal.tex}
 \caption{test.}
 \label{fig:test}
 \end{figure}
