--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -1,1 +1,10 @@
 \chapter{Overview}
+
+\begin{figure}[H]
+\centering
+\tikzsetnextfilename{SystemOverview}
+\scalebox{0.8}{
+\input{figures/SystemOverview.tex}}
+\caption{Overview of the system}
+\label{fig:SystemOverview}
+\end{figure}
