--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -148,7 +148,7 @@
 \usepackage[square]{natbib}
 \usepackage{natbib}
 % Appearance of the bibliography
-\bibliographystyle{setup/apalike}
+\bibliographystyle{00setup/apalike}
 %\bibliographystyle{IEEEtran}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
