--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -14,3 +14,11 @@
   howpublished = {\url{http://www.see.ed.ac.uk/~jwp/control06/controlcourse/restricted/course/advanced/module7-2.html}},
   year = {2007},
 }
+
+@MISC{sou:CTA,
+  title = {Consumer Technology Association},
+  author = {{Laura Hubbard}},
+  note = {Downloaded February 15, 2016},
+  howpublished = {\url{https://www.cta.tech/News/News-Releases/Press-Releases/2014/Consumer-Electronics-Industry-Revenues-to-Reach-Al.aspx}},
+  year = {2014},
+}
