--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,9 +1,30 @@
 \chapter{Introduction}
 
+The market for wireless loudspeakers has been growing considerably the last few years. According to Consumer Technology Association (CTA) the revenue of wireless loudspeakers has been growing 69\% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone as remote controller. 
+
+Wireless loudspeakers are primarily active loudspeakers and are usually small. The size of the loudspeaker unit is therefore limited, and as a result the loudspeaker may not play very loud and the performance of the loudspeaker in the bass region is limited. To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. However because of the limited size, increasing the bass can potentially lead to sound distortions caused by clipping or enclosure vibrations.
+
+
+%Active loudspeakers are loudspeakers with an integrated amplifier used to drive the loudspeakers, since the signal from the smartphone do not have enough power.  
+
+
+%Small loudspeakers grows in popularity
+% Wireless loudspeakers are popular
+% Smartphones and music streaming services are becoming popular
+% Because of their wireless connectivity people desires audio solution were they can connect to their audio system through i.e. Wifi or Bluetooth. 
+% 
+
+% More people nowadays desires small loudspeaker, because of their portability and price.
+% The market for small loudspeakers are therefore growing
+% However even though the market is growing the performance of the small loudspeaker is still not necerssarily good.
+% Because of their small sizes, there are limitations on 
+
+
+
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{signal}
 \input{figures/signal.tex}
-\caption{test.}
+\caption{The measurements are recorded by a microphone and shows the distorted sound created by the loudspeaker. A 100 Hz sinusoid is played through a small loudspeaker with different amplitudes. When pushing the loudspeaker to its limits by adding a gain on 12 dB, the enclosure of the loudspeaker begins to shake which produces a distorted sound.}
 \label{fig:test}
 \end{figure}
