new files and updates

--- a/Rapport/figures/signal.tex
+++ b/Rapport/figures/signal.tex
@@ -10,7 +10,7 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=4.5in,
+width=4in,
 height=2.5in,
     grid = both,
     minor tick num=1,
@@ -8034,7 +8034,7 @@ axis background/.style={fill=white}
 0.090702947845805	-0.023406982421875\\
 0.0907256235827665	-0.018646240234375\\
 };
-\addlegendentry{Measured signal at -20 dB};
-\addlegendentry{Measured signal at -8 dB};
+\addlegendentry{Recorded signal at -20 dB};
+\addlegendentry{Recorded signal at -8 dB};
 \end{axis}
 \end{tikzpicture}%
