new files and updates

--- a/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
+++ b/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
@@ -3,7 +3,7 @@
 
 \input{1Chapters/1Preanalysis/Equalizer.tex}
 
-
+\input{1Chapters/1Preanalysis/audioClipping.tex}
 
 
 \section{Problem Statement}
