--- a/Rapport/1Chapters/1Preanalysis/audioClipping.tex
+++ b/Rapport/1Chapters/1Preanalysis/audioClipping.tex
@@ -1,1 +1,40 @@
 \section{Audio clipping}
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.47\textwidth}
+	\tikzsetnextfilename{clippingClean}
+	\input{figures/clippingClean.tex}
+	\caption{Test.}
+	\label{fig:clippingClean}
+\end{subfigure}
+\hspace{6mm} 
+\begin{subfigure}[b]{0.47\textwidth}
+	\tikzsetnextfilename{clippingDist}
+	\input{figures/clippingDist.tex}
+	\caption{Test.}
+	\label{fig:clippingDist}
+\end{subfigure}
+\end{figure}
+
+
+%\begin{figure}[H]
+%\centering
+%\begin{subfigure}[b]{0.47\textwidth}		
+%	\tikzsetnextfilename{clippingClean}
+%	\input{figures/clippingClean.tex}
+%        \vspace{2mm}
+%        \caption{Frequency response using impulse invariance method\citep{oppenheim}.}
+%        \label{fig:impulse_invariance}
+%    \end{subfigure} 
+%    \hspace{4mm} 
+%\begin{subfigure}[b]{0.48\textwidth}
+%	\tikzsetnextfilename{clippingClean}
+%	\input{figures/clippingClean.tex}
+%        \vspace{2mm}
+%        \caption{Frequency response using bilinear transformation\citep{oppenheim}.}
+%        \label{fig:bilinear_transform}
+%    \end{subfigure}  
+%\caption{Comparison between the impulse invariance method and bilinear transformation.}
+%\label{fig:filter_design_methods}
+%\end{figure}
