Skrevet noget til equalizer

--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -1,12 +1,3 @@
-@book{joakim,
-    author    = "Moeslund, Thomas B.",
-    title     = "Introduction to video and image processing",
-    publisher = "SPringer",
-    edition  = "1.",
-    year      = "2012",
-    note	  = "ISBN: 978-1-4471-2502-0",
-}
-
 @MISC{sou:PmGm,
   title = {The Bode Diagram},
   author = {{The University of Edinburgh}},
@@ -21,4 +12,20 @@
   note = {Downloaded February 15, 2016},
   howpublished = {\url{https://www.cta.tech/News/News-Releases/Press-Releases/2014/Consumer-Electronics-Industry-Revenues-to-Reach-Al.aspx}},
   year = {2014},
+}
+
+@MISC{sou:VoiceFundamentals,
+  title = {Voice Fundamentals - Human Speech Frequency},
+  author = {{Behzad Munir}},
+  note = {Downloaded February 18, 2016},
+  howpublished = {\url{http://www.uoverip.com/voice-fundamentals-human-speech-frequency/}},
+  year = {2012},
+}
+
+@book{ISO226,
+    author    = "International Organization for Standardization",
+    title     = "ISO226:2003 - Normal equal-loudness-level contours",
+    publisher = "ISO",
+    edition  = "2nd",
+    year      = "2003",
 }
