--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -328,7 +328,7 @@
 
 
 % Citation aliasses for nicer references in text
-\defcitealias{ARRL}{\scshape ARRL, 2014}
+\defcitealias{ISO226}{\scshape ISO223, 2003}
 \defcitealias{radio_standard}{\scshape IEC 61305-2, 1997}
 \defcitealias{tysk}{\scshape EN 60315-4, 1998}
 \defcitealias{REC}{\scshape Rec. ITU-R BS.704, 1990}
