--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -28,7 +28,7 @@
 %\include{laesevejledning}
 
 \selectlanguage{english}
-\title{Segway}
+\title{Equalizer with dynamic bass correction}
 
 \pagestyle{empty} %disable headers and footers
 \pagenumbering{roman} %use roman page numbering in the frontmatter I II...
