--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -71,15 +71,9 @@
 \newacronym{IDE}{IDE}{Integrated Development Environment}
 \newacronym{HAL}{HAL}{Hardware Abstraction Layer}
 \newacronym{RC}{RC}{Remote Controller}
+\newacronym{CTA}{CTA}{Consumer Technology Association}
 
-% acronymer der ikke er skrevet op
-%PC
-%RAW
-%YCbCr
-%DC
-%AC
-%RS.232
-%RGB \newacronym{RGB}{RGB}{red, green, blue}
+
 
 
 
