new updates to figure

--- a/Rapport/1Chapters/1Preanalysis/audioClipping.tex
+++ b/Rapport/1Chapters/1Preanalysis/audioClipping.tex
@@ -14,7 +14,7 @@ Audio clipping is a
 \begin{subfigure}[t]{0.47\textwidth}
 	\tikzsetnextfilename{clippingDist}
 	\input{figures/clippingDist.tex}
-	\caption{A 1 kHz Hz clipped sinusoid.}
+	\caption{A 1 kHz clipped sinusoid.}
 	\label{fig:clippingDist}
 \end{subfigure}
 \caption{The difference between a unaffected signal and a clipped signal. As the maximum output is 1, the signal is hard clipped because of the limitation.}
@@ -33,7 +33,7 @@ Audio clipping is a
 \begin{subfigure}[t]{0.47\textwidth}
 	\tikzsetnextfilename{clippingDistFFT}
 	\input{figures/clippingDistFFT.tex}
-	\caption{A 1 kHz Hz clipped sinusoid.}
+	\caption{A 1 kHz clipped sinusoid.}
 	\label{fig:clippingDistFFT}
 \end{subfigure}
 \caption{The difference between a unaffected signal and a clipped signal. As the maximum output is 1, the signal is hard clipped because of the limitation.}
