--- a/Rapport/figures/clippingDist.tex
+++ b/Rapport/figures/clippingDist.tex
@@ -11,13 +11,16 @@ width=2.5in,
 height=2in,
 at={(1.011in,0.642in)},
 scale only axis,
+scaled x ticks = false,
 xmin=0,
 xmax=0.002,
-xlabel={Time [s]},
+xlabel={Time [ms]},
 xmajorgrids,
 ymin=-2,
 ymax=2,
 ymajorgrids,
+xticklabels={0, 0.5, 1, 1.5, 2},
+xtick = {0, 0.0005, 0.001, 0.0015, 0.002},
 yticklabels={\empty},
 axis background/.style={fill=white},
 ]
