--- a/Rapport/figures/clippingDistFFT.tex
+++ b/Rapport/figures/clippingDistFFT.tex
@@ -11,13 +11,16 @@ width=2.5in,
 height=2in,
 at={(1.011in,0.642in)},
 scale only axis,
+scaled x ticks = false,
 xmin=0,
 xmax=10000,
-xlabel={Frequency [Hz]},
+xlabel={Frequency [kHz]},
 xmajorgrids,
 ymin=-350,
 ymax=100,
 yticklabels={\empty},
+xticklabels={0, 2, 4, 6, 8},
+xtick = {0, 2000, 4000, 6000, 8000},
 ymajorgrids,
 axis background/.style={fill=white}
 ]
