--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-The market for wireless loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of wireless loudspeakers has been growing 69\% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
+The market for bluetooth loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of wireless loudspeakers has been growing 69\% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
 
 Wireless loudspeakers are primarily active loudspeakers and are usually small. As a result the loudspeaker may not play very loud and the performance of the loudspeaker in the bass region is limited. To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. However because of the limited size, increasing the bass can potentially lead to sound distortions caused by clipping or enclosure vibrations. The measurements in \autoref{fig:introduction} shows how a boost in the bass region can distort the sound.
 
