rettelser til introduktion og dali afsnit smidt i appendiks

--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -133,7 +133,7 @@
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
-\include{2Appendix/Appendix}
+\include{2Appendix/AppendixMain}
 
 
 \end{document}
