Writing on equalizer and distortion

--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -29,3 +29,13 @@
     edition  = "2nd",
     year      = "2003",
 }
+
+@MISC{sou:NoteA,
+  title = {Physics Department, Michigan Technological University - (Frequencies for equal-tempered scale, A4 = 440 Hz)},
+  author = {B. H. Suits},
+  note = {Downloaded February 19, 2016},
+  howpublished = {\url{http://www.phy.mtu.edu/~suits/notefreqs.html}},
+  year = {1998},
+}
+
+
