--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -374,3 +374,15 @@
 \newcommand{\todoanders}[1]{\todo[color=red!40, author=Anders]{#1}}
 \graphicspath{{./rapport/billeder/}}
 \newcommand{\todohusk}[1]{\todo[color=red, author=HUSK:]{#1}}
+
+
+
+
+
+
+%%PGF TABLES%%
+\usepackage{booktabs}
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+\usepackage{array}
+\usepackage{ragged2e}
+
