--- a/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
+++ b/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
@@ -1,5 +1,6 @@
 \chapter{Problem Analysis}
 
+This section will enlighten the problems concerning manipulation of sound. How is sound perceived, what is heard as warm sound and what is heard as distortion. Furthermore what kinds of situations concerning what creates the distortion in a loudspeaker. 
 
 \input{1Chapters/1Preanalysis/Equalizer.tex}
 
